# basket_case

./: README.md  pyproject.toml
.github/workflows/: test_upon_PR.yml
src/basket_case/: __init__.py  basket.py
tests/: conftest.py  fixtures.py  test_basket.py  timings.py
